--- a/index.html
+++ b/index.html
@@ -405,12 +405,12 @@
          </div>
 
          <!-- products card list -->
-          <div class="row my-3 bg-white py-3">
+          <div class="row my-3 py-3">
             <!-- heading -->
             <h2 class="fw-bold mt-2 product-display-heading">Discover products for you</h2>
             
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/1.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -424,7 +424,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/2.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -438,7 +438,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/3.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -452,7 +452,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/4.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -466,7 +466,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/5.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -480,7 +480,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/6.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -494,7 +494,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/7.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -508,7 +508,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/8.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -522,7 +522,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/9.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -536,7 +536,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/10.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -550,7 +550,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/11.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -564,7 +564,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/12.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -932,12 +932,12 @@
          </div>
 
          <!-- products card list -->
-          <div class="row my-3 bg-white py-3">
+          <div class="row my-3 py-3">
             <!-- heading -->
             <h2 class="fw-bold mt-2 product-display-heading">Discover products for you</h2>
             
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/1.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -951,7 +951,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/2.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -965,7 +965,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/3.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -979,7 +979,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/4.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -993,7 +993,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/5.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -1007,7 +1007,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/6.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -1021,7 +1021,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/7.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -1035,7 +1035,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/8.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -1049,7 +1049,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/9.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -1063,7 +1063,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/10.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -1077,7 +1077,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/11.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
@@ -1091,7 +1091,7 @@
             </div>
 
             <!-- product card -->
-            <div class="col-6 col-sm-4 col-lg-2 my-2">
+            <div class="col-6 col-sm-4 col-lg-2 my-2 p-1">
                 <div class="card h-100">
                     <img src="./assets/images/12.jpg" alt="" class="card-img-top card-img">
                     <div class="card-body">
